Revision history for Perl extension ViennaNGS.

0.01  Fri Sep 13 12:02:47 2013
	- original version; created by h2xs 1.23 with options
		-XA -n ViennaNGS
	- added get_stranded_subsequence()

0.02  Mon Nov 4 2013
	- added split_bam()
        - added scripts/bam_split.pl

0.03  Tue Nov 5 2013
    	- added bam2bw()
	- updated README

0.04  Tue Nov 26 2013
	- added scripts/DEXSeq_gff2bed.pl
	- updated README

0.05  Thu Apr 03 2014
	- added bed2bw()
	- updated and extended bam_split()
	- updated scripts/bam_split.pl
	- adjusted perl shebang in /scripts

0.06_1
	- adjusted perl shebang in /scripts
	- added normalize_multicov.pl in /scripts. For that purpose:
	- added computeTPM()
	- added parse_multicov()
	- added write_multicov()
	- added featCount_data() accessor for @featCount AoHoH 